Fix code creating a gap in the code previews

--- a/css/scss/_code.scss
+++ b/css/scss/_code.scss
@@ -3,3 +3,7 @@ code {
   border-radius: $border-radius-sm;
   padding: 0 $spacer * .25;
 }
+
+pre code {
+  padding: 0;
+}
